[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "langchain-soniox"
version = "0.1.0"
description = "LangChain integration for Soniox"
readme = "README.md"
authors = [
    { name = "Soniox", email = "info@soniox.com" }
]
dependencies = [
    "httpx>=0.27.0",
    "langchain-core>=0.3.0",
]
requires-python = ">=3.9"
license = { text = "MIT" }

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "ruff>=0.9.0",
    "mypy>=1.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["langchain_soniox"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=0.23.0",
]