[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langchain-soniox"
dynamic = ["version"]
description = "LangChain integration for Soniox"
readme = "README.md"
authors = [
    { name = "Soniox Inc", email = "support@soniox.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "httpx>=0.27.0",
    "langchain-core>=0.3.0",
]
requires-python = ">=3.9"
license = { text = "MIT" }

[project.urls]
Homepage = "https://soniox.com/"
Repository = "https://github.com/soniox/langchain-soniox"

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "ruff>=0.9.0",
    "mypy>=1.0.0",
]

[tool.hatch.version]
path = "langchain_soniox/__init__.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["langchain_soniox"]
